[project]
name = "hne_segmentation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "imagecodecs>=2025.3.30",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "tifffile>=2025.5.10",
    "tqdm>=4.67.1",
]
